--- a/po/cs.po
+++ b/po/cs.po
@@ -1,23 +1,23 @@
 # Czech translation of gdl.
-# Copyright (C) 2002, 2003, 2004, 2008, 2009 the author(s) of gdl.
+# Copyright (C) 2002, 2003, 2004, 2008, 2009, 2010 the author(s) of gdl.
 # Copyright (C) 2004, 2005 Miloslav Trmac <mitr@volny.cz>.
 # This file is distributed under the same license as the gdl package.
 # Miloslav Trmac <mitr@volny.cz>, 2002, 2003, 2004, 2005.
 # Lucas Lommer <llommer@svn.gnome.org>, 2008, 2009, 2010.
-# Petr Kovar <pknbe@volny.cz>, 2008.
-#
+# Petr Kovar <pknbe@volny.cz>, 2008, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
-"product=gdl&component=general\n"
-"POT-Creation-Date: 2010-02-26 19:23+0000\n"
-"PO-Revision-Date: 2010-03-07 13:16+0100\n"
-"Last-Translator: Lucas Lommer <llommer@svn.gnome.org>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2010-03-20 02:17+0100\n"
+"PO-Revision-Date: 2010-03-20 02:16+0100\n"
+"Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.0\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: ../gdl/gdl-dock-item-grip.c:342
 msgid "Iconify this dock"
@@ -340,11 +340,11 @@ msgstr "Výška doku, když je ukotven"
 
 #: ../gdl/gdl-dock-placeholder.c:185
 msgid "Floating Toplevel"
-msgstr ""
+msgstr "Plovoucí nejvyšší úroveň"
 
 #: ../gdl/gdl-dock-placeholder.c:186
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
-msgstr ""
+msgstr "Zda je placeholder spojen s plovoucím dokem nejvyšší úrovně"
 
 #: ../gdl/gdl-dock-placeholder.c:192
 msgid "X-Coordinate"
@@ -455,4 +455,3 @@ msgstr "_Načíst"
 #: ../gdl/layout.ui.h:5
 msgid "_Lock dock items"
 msgstr "_Zamknout položky doku"
-
