--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 2.31.2
+
+* Translation updates
+
 Changes in 2.31.1
 
 * Keep the internal label of the gdl-dock-item up-to-date and include a stock icon (bgo#615113)
